<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="62dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <LinearLayout
        android:theme="@style/AppTheme"
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/app_orange"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/header_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_tailless_up_arrow" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="18dp"
            android:text="Filter Recipes"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_cuisines_txt_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Filter cuisines"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cuisines_chipgroup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_cuisines_txt_linear">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cuisines_chipgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="false">


            <com.google.android.material.chip.Chip
                android:id="@+id/french_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/italian_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/italian"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chinese_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/mexican_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mexican"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/thai_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thai"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/mediterranean_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mediterranean"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/greek_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greek"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/indian_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indian"
                app:chipIconTint="@color/colorAccent" />


        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_mealtypes_txt_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cuisines_chipgroup_layout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/filter_meal_types"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chipgroup_mealtypes_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_mealtypes_txt_linear">>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mealtype_chipgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/breakfast_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/main_course_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_course"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/side_dish_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/side_dish"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/dessert_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dessert"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/appetizer_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appetizer"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/beverage_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beverage"
                app:chipIconTint="@color/colorAccent" />


        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_allergens_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipgroup_mealtypes_linear">>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/filter_allergens"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="8dp"
            android:text="@string/select_to_remove" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chipgroup_allergens_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_allergens_linear">>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/allergens_chipgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/dairy_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dairy"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/egg_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/egg"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/peanut_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peanut"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/soy_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soy"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/gluten_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gluten"
                app:chipIconTint="@color/colorAccent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/seafood_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seafood"
                app:chipIconTint="@color/colorAccent" />


        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipgroup_allergens_layout">>

        <Button
            android:id="@+id/apply_filters_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/apply_filters" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>