<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".zincActivities.AmazonCredsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        >

        <ImageView
            android:id="@+id/amazon_logo_image"
            android:layout_width="150dp"
            android:layout_height="151dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/amazon_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif"
            android:text="Please enter your details"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_margin="6dp"
            app:errorEnabled="true"
            android:background="@drawable/round_corner_toggle"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amazon_login_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_margin="6dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:background="@drawable/round_corner_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amazon_login_pword_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/amazon_login_btn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/app_orange"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            />


    </LinearLayout>

</ScrollView>